# expressiongraph

./: .gitignore  CMakeLists.txt  COPYING  README.md  catkin.cmake  mainpage.dox  manifest.old  package.xml  preamble.txt  rosdoc.yaml
doc/: Doxyfile.in  earliest_value.rst  extract_API_EG.sh  generate_doxyfile.sh  getRPY.rst  push_doxyfile.sh
examples/: CMakeLists.txt  conversions_example.cpp  debug1.cpp  expressiontree_cached_named.cpp  expressiontree_cb.cpp  expressiontree_conditional.cpp  expressiontree_distance_to_line.cpp  expressiontree_example.cpp  expressiontree_example10.cpp  expressiontree_example11.cpp  expressiontree_example12.cpp  expressiontree_example2.cpp  expressiontree_example3.cpp  expressiontree_example4.cpp  expressiontree_example5.cpp  expressiontree_example6.cpp  expressiontree_example7.cpp  expressiontree_example8.cpp  expressiontree_example9.cpp  expressiontree_function.cpp  expressiontree_function1.cpp  expressiontree_function2.cpp  expressiontree_mimo_ex.cpp  expressiontree_motion_profile.cpp  expressiontree_motion_profile2.cpp  expressiontree_optimizer.cpp  expressiontree_perpendicular.cpp  expressiontree_sensor.cpp  expressiontree_trait.cpp  expressiontree_variabletype.cpp  initial_value.cpp  matrix_traits.cpp  mptrap_tst.cpp  quat.cpp  resolved_motion_rate_control.cpp  saturate.cpp  solving_and_cloning.cpp  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp
include/expressiongraph/: conversions.hpp  expressiontree_chain.hpp  expressiontree_double.hpp  expressiontree_euler.hpp  expressiontree_exceptions.hpp  expressiontree_expressions.hpp  expressiontree_frame.hpp  expressiontree_function.hpp  expressiontree_integral.hpp  expressiontree_matrix.hpp  expressiontree_mimo.hpp  expressiontree_motionprofiles.hpp  expressiontree_n_ary.hpp  expressiontree_quaternion.hpp  expressiontree_rotation.hpp  expressiontree_traits.hpp  expressiontree_twist.hpp  expressiontree_var.hpp  expressiontree_vector.hpp  expressiontree_wrench.hpp  integrator.hpp  mptrap.hpp  quat.hpp  quat_io.hpp
include/kdl/: conversions.hpp  expressiontree.hpp  expressiontree_chain.hpp  expressiontree_double.hpp  expressiontree_euler.hpp  expressiontree_expressions.hpp  expressiontree_frame.hpp  expressiontree_matrix.hpp  expressiontree_mimo.hpp  expressiontree_motionprofiles.hpp  expressiontree_motprof.hpp  expressiontree_n_ary.hpp  expressiontree_quaternion.hpp  expressiontree_rotation.hpp  expressiontree_traits.hpp  expressiontree_twist.hpp  expressiontree_var.hpp  expressiontree_vector.hpp  expressiontree_wrench.hpp  mptrap.hpp  quat.hpp  quat_io.hpp
src/: expressiontree_chain.cpp  expressiontree_double.cpp  expressiontree_expressions.cpp  expressiontree_frame.cpp  expressiontree_function.cpp  expressiontree_integral.cpp  expressiontree_mimo.cpp  expressiontree_motionprofiles.cpp  expressiontree_motprof.cpp  expressiontree_quaternion.cpp  expressiontree_rotation.cpp  expressiontree_twist.cpp  expressiontree_vector.cpp  expressiontree_wrench.cpp  integrator.cpp  mptrap.cpp  util.hpp
standalone/: CMakeLists.txt  expressiongraph.pc.in  readme.md
tests/: expressiongraph_test.cpp  expressiongraph_test.hpp  test_expressiongraph.cpp  test_expressiongraph.hpp  test_quat.cpp  test_quat.hpp
tests/obsolete/: expressiongraph_test.cpp  expressiongraph_test.hpp
